Added some recipes in a new directory
recipes now linked to the main page and vice versa

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>
-        Web Recepies
-    </title>
-    <meta charset="UTF-8">
-</head>
-<body>
-    <h1>Web Recipes</h1>
-</body>
+    <head>
+        <title>
+            Web Recepies
+        </title>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <h1>Web Recipes</h1>
+        <a href="recipes/japanesecurry.html">Japanese Curry</a>
+        <a href="recipes/carbonara.html">Spaghetti alla Carbonara</a>
+        <a href="recipes/onionsoup.html">French Onion Soup</a>
+    </body>
 </html>
