Added 3 recipes with simple designs
More content for the visitors to see and read

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -9,6 +9,29 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>Spaghetti Carbonara</h1>
+        <p><img src="../images/spaghetticarbonara.webp" alt="Could not load image"></p>
+        <h2>Description</h2>
+        <p>A dish from italy that is traditionally prepared with guanciale and Pecorino Romano to make a rich and silky sauce</p>
+        <p>In this recipe however the rare and expansive Ingredients are substituted with more affordable alternatives</p>
+
+        <h2>Ingredients (2. Ppl.)</h2>
+            <ul>
+                <li>4 teaspoons olive oil</li>
+                <li>2 pounds bacon, diced</li>
+                <li>16 ounce spaghetti</li>
+                <li>6 large eggs</li>
+                <li>1.25 cups grated parmesan</li>
+                <li>salt and freshly ground black pepper to taste</li>
+            </ul>
+
+        <h2>Steps</h2>
+            <ol>
+                <li>Heat olive oil in a large skillet over medium heat; add guanciale (see Cook's Note). Cook, turning occasionally, until evenly browned and crispy, 5 to 10 minutes. Remove from heat and drain on paper towels.</li>
+                <li>Bring a large pot of salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until tender yet firm to the bite, about 9 minutes. Drain and return to the pot. Let cool, stirring occasionally, about 5 minutes.</li>
+                <li>Whisk eggs, 1/2 of the Pecorino Romano cheese, and some black pepper in a bowl until smooth and creamy.</li>
+                <li>Pour egg mixture over pasta, stirring quickly, until creamy and slightly cooled. Stir in guanciale.</li>
+                <li>Top with remaining Pecorino Romano cheese and more black pepper.</li>
+            </ol>
 
     </body>
 </html>
