--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     </head>
     <body>
         <h1>Web Recipes</h1>
-        <a href="recipes/japanesecurry.html">Japanese Curry</a>
-        <a href="recipes/carbonara.html">Spaghetti alla Carbonara</a>
-        <a href="recipes/onionsoup.html">French Onion Soup</a>
+        <ul>
+            <li><a href="recipes/japanesecurry.html">Japanese Curry</a></li>
+            <li><a href="recipes/carbonara.html">Spaghetti alla Carbonara</a></li>
+            <li><a href="recipes/onionsoup.html">French Onion Soup</a></li>
+        </ul>
     </body>
 </html>
