--- a/recipes/japanesecurry.html
+++ b/recipes/japanesecurry.html
@@ -9,6 +9,39 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>Japanese Curry</h1>
+        <p><img src="../images/japcurry.webp" alt="Could not load image"></p>
+
+        <h2>Description</h2>
+        <p>Japanese Curry offers a savory and calming experience</p>
+
+        <h2>Ingredients (1 Per.)</h2>
+            <ul>
+                <li>1 tablespoon vegetable oil</li>
+                <li>1 ¾ pounds beef chuck, cut into 2-inch cubes</li>
+                <li>3 onions, quartered</li>
+                <li>1 tablespoon ketchup</li>
+                <li>1 ½ teaspoons Worcestershire sauce</li>
+                <li>1 pinch cayenne pepper</li>
+                <li>water to cover</li>
+                <li>4 carrots, cut into 2-inch pieces</li>
+                <li>1 cube chicken bouillon</li>
+                <li>3 medium potatoes, cut into 3-inch chunks</li>
+                <li>3.5 ounce containers Japanese curry roux</li>
+            </ul>
+
+        <h2>Steps</h2>
+            <ol>
+                <li>Heat oil in a 6-quart pot over medium-high heat. Add beef and saute until brown, 5 to 7 minutes. Add onions and cook until starting to soften, about 3 minutes. Add ketchup and Worcestershire sauce. Stir to coat. Add cayenne pepper. Pour in water to cover mixture by 1 or 2 inches. Add carrots and bouillon.</li>
+                <li>Simmer, skimming fat off the surface of the broth as needed, for 30 minutes. Add potatoes. Stir in 1 package of curry roux and let dissolve; add remaining curry as needed to achieve desired thickness. Continue simmering until beef and vegetables are tender, about 30 minutes more.</li>
+            </ol>
+            <h3>Note</h3>
+            <em>Use any beef stew meat you prefer.
+
+                Substitute soy sauce for the Worcestershire if desired.
+                
+                Curry roux is found in boxes in the international aisle or an international grocery store. There are many brands with varying heat levels. I like S&B and Vermont Curry. I usually mix the two brands. The more roux you use the thicker the sauce.
+                
+                As with most stews, the longer you simmer the better it will taste. This can also be frozen without the potatoes.</em>
 
     </body>
 </html>
