Added stylesheets and classes and IDs to html
styling added to make the pages more pleasing to the eye

--- a/recipes/onionsoup.html
+++ b/recipes/onionsoup.html
@@ -5,39 +5,41 @@
             Onion Soup
         </title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <a href="../index.html">Home</a>
-        <h1>French Onion Soup</h1>
-        <p><img src="../images/onionsoup.webp" alt="Could not load image"></p>
-        <h2>Description</h2>
-        <p>French onion soup, or soupe à l'oignon gratinée, is a classic French dish made with caramelized onions and beef stock or broth.</p>
-        <p>The soup is topped with bread and cheese, then gratinéed to rich, gooey perfection. It's traditionally served in a ramekin or a ceramic crock with a handle.</p>
+        <a href="../index.html">&#8666; Home</a>
+        <div class = "container">
+            <h1>French Onion Soup</h1>
+            <p><img ID="dish" src="../images/onionsoup.webp" alt="Could not load image"></p>
+            <h2>Description</h2>
+            <p>French onion soup, or soupe à l'oignon gratinée, is a classic French dish made with caramelized onions and beef stock or broth.</p>
+            <p>The soup is topped with bread and cheese, then gratinéed to rich, gooey perfection. It's traditionally served in a ramekin or a ceramic crock with a handle.</p>
 
-        <h2>Ingredients (2 Ppl.)</h2>
-            <ul>
-                <li>1 cup unsalted butter</li>
-                <li>4 tablespoons olive oil</li>
-                <li>8 cups sliced onions</li>
-                <li>10 cups beef broth</li>
-                <li>4 tablespoons dry sherry</li>
-                <li>2 teaspoons dried thyme</li>
-                <li>2 pinches salt and pepper to taste</li>
-                <li>8 slices French bread</li>
-                <li>8 slices provolone cheese</li>
-                <li>4 slices Swiss cheese, diced</li>
-                <li>½ cup grated Parmesan cheese</li>
-            </ul>
+            <h2>Ingredients (2 Ppl.)</h2>
+                <ul>
+                    <li>1 cup unsalted butter</li>
+                    <li>4 tablespoons olive oil</li>
+                    <li>8 cups sliced onions</li>
+                    <li>10 cups beef broth</li>
+                    <li>4 tablespoons dry sherry</li>
+                    <li>2 teaspoons dried thyme</li>
+                    <li>2 pinches salt and pepper to taste</li>
+                    <li>8 slices French bread</li>
+                    <li>8 slices provolone cheese</li>
+                    <li>4 slices Swiss cheese, diced</li>
+                    <li>½ cup grated Parmesan cheese</li>
+                </ul>
 
-        <h2>Steps</h2>
-            <ol>
-                <li>Gather all ingredients.</li>
-                <li>Melt butter with olive oil in an 8-quart stock pot over medium heat. Add onions to butter and continually stir until tender and translucent. Do not brown the onions.</li>
-                <li>Add beef broth, sherry, and thyme. Season with salt and pepper. Let simmer for 30 minutes. Meanwhile, preheat the oven's broiler.</li>
-                <li>Ladle soup into oven-safe serving bowls and place one slice of bread on top of each (bread may be broken into pieces if you prefer). Layer each slice of bread with a slice of provolone, 1/2 slice diced Swiss and 1 tablespoon Parmesan cheese.</li>
-                <li>Place bowls on a cookie sheet and broil in the preheated oven until cheese bubbles and browns slightly, 2 to 3 minutes.</li>
-                <li>Serve hot and enjoy!</li>
-            </ol>
-
+            <h2>Steps</h2>
+                <ol>
+                    <li>Gather all ingredients.</li>
+                    <li>Melt butter with olive oil in an 8-quart stock pot over medium heat. Add onions to butter and continually stir until tender and translucent. Do not brown the onions.</li>
+                    <li>Add beef broth, sherry, and thyme. Season with salt and pepper. Let simmer for 30 minutes. Meanwhile, preheat the oven's broiler.</li>
+                    <li>Ladle soup into oven-safe serving bowls and place one slice of bread on top of each (bread may be broken into pieces if you prefer). Layer each slice of bread with a slice of provolone, 1/2 slice diced Swiss and 1 tablespoon Parmesan cheese.</li>
+                    <li>Place bowls on a cookie sheet and broil in the preheated oven until cheese bubbles and browns slightly, 2 to 3 minutes.</li>
+                    <li>Serve hot and enjoy!</li>
+                </ol>
+        </div>
     </body>
 </html>
