--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
             Web Recepies
         </title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Web Recipes</h1>
-        <ul>
-            <li><a href="recipes/japanesecurry.html">Japanese Curry</a></li>
-            <li><a href="recipes/carbonara.html">Spaghetti alla Carbonara</a></li>
-            <li><a href="recipes/onionsoup.html">French Onion Soup</a></li>
-        </ul>
+        <div class="container">
+            <h1>Web Recipes</h1>
+            <ul class="reclist">
+                <li><a href="recipes/japanesecurry.html">Japanese Curry</a></li>
+                <li><a href="recipes/carbonara.html">Spaghetti alla Carbonara</a></li>
+                <li><a href="recipes/onionsoup.html">French Onion Soup</a></li>
+            </ul>
+        </div>
     </body>
 </html>
